--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -289,5 +289,9 @@
   "C_Cpp_Runner.showCompilationTime": false,
   "C_Cpp_Runner.useLinkTimeOptimization": false,
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
-  "C_Cpp.errorSquiggles": "disabled"
+  "C_Cpp.errorSquiggles": "disabled",
+  "files.associations": {
+    "iterator": "cpp",
+    "ostream": "cpp"
+  }
 }
